CSS fix, display POD templates in the viewlet using display: inline-block;   instead of display: inline; so attached tags may be aligned on it.

--- a/src/collective/documentgenerator/browser/resources/css/documentgenerator.css
+++ b/src/collective/documentgenerator/browser/resources/css/documentgenerator.css
@@ -1,6 +1,6 @@
 div#doc-generation-view ul.pod-template li {
     line-height: 0.5em;
-    display: inline;
+    display: inline-block;
     list-style: none;
     margin-left: 0.5em;
 }
